<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="searchdoctor"
                type="com.docter.docter.viewmodel.SearchDoctorViewmodel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/layout_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.splash.SearchDoctor">

        <include
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:id="@+id/toolbar"
                layout="@layout/layout_header_nav"
                app:layout_constraintTop_toTopOf="parent"/>

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="?attr/actionBarSize"
                android:fillViewport="true">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <View
                        android:id="@+id/search_divider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/black"
                        app:layout_constraintTop_toTopOf="parent"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_doctortype"
                        style="@style/txt_headerseaction_bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/doctor_type"
                        android:paddingStart="@dimen/margin_10"
                        android:paddingEnd="@dimen/margin_10"
                        android:paddingBottom="@dimen/margin_10"
                        android:layout_marginBottom="@dimen/margin_10"
                        android:layout_marginStart="@dimen/margin_10"
                        android:layout_marginEnd="@dimen/margin_10"
                        android:textSize="22sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/search_divider"/>


                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_doctortype"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:spanCount="3"
                        app:layout_constraintTop_toBottomOf="@+id/txt_doctortype">

                </androidx.recyclerview.widget.RecyclerView>


                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_speciality"
                        style="@style/txt_headerseaction_bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_10"
                        android:layout_margin="@dimen/margin_10"
                        android:text="@string/speciality"
                        android:textSize="22sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/recycler_doctortype"/>
                <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/spinner_speciality"
                        style="@style/txt_footerseaction_regular"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin_40"
                        android:padding="@dimen/margin_10"
                        android:layout_margin="@dimen/margin_10"
                        android:textSize="22sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:spinnerMode="dropdown"
                        android:background="@drawable/spinnerborder"
                        android:textColor="#000000"
                        app:layout_constraintTop_toBottomOf="@+id/txt_speciality"/>
                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_subspeciality"
                        style="@style/txt_headerseaction_bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_10"
                        android:layout_margin="@dimen/margin_10"
                        android:text="@string/sub_specialitydoctor_type"
                        android:textSize="22sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/spinner_speciality"/>
                <androidx.appcompat.widget.AppCompatSpinner
                        style="@style/txt_footerseaction_regular"
                        android:id="@+id/spinner_subspeciality"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin_40"
                        android:padding="@dimen/margin_10"
                        android:layout_margin="@dimen/margin_10"
                        android:textSize="22sp"
                        android:textColor="#000000"
                        android:spinnerMode="dropdown"
                        android:background="@drawable/spinnerborder"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt_subspeciality"/>
                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_distance"
                        style="@style/txt_headerseaction_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_10"
                        android:layout_margin="@dimen/margin_10"
                        android:text="@string/distance"
                        android:textSize="22sp"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/spinner_subspeciality"
                        app:layout_constraintRight_toLeftOf="@+id/txt_distancemiles"
                        app:layout_constraintStart_toStartOf="parent"/>
                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_distancemiles"
                        style="@style/txt_headerseaction_bold"
                        android:layout_width="wrap_content"
                        android:padding="@dimen/margin_10"
                        android:layout_margin="@dimen/margin_10"
                        android:layout_height="wrap_content"
                        android:text="@string/miles"
                        android:textSize="22sp"
                        app:layout_constraintTop_toBottomOf="@+id/spinner_subspeciality"
                        app:layout_constraintLeft_toRightOf="@+id/txt_distance"
                        app:layout_constraintRight_toRightOf="parent"/>


                <androidx.appcompat.widget.AppCompatSeekBar
                        android:id="@+id/distance_seekbar"
                        android:layout_width="match_parent"
                        android:padding="@dimen/margin_10"
                        android:layout_margin="@dimen/margin_10"
                        android:layout_height="@dimen/margin_40"
                        android:max="10"
                        android:maxHeight="3dp"
                        android:minHeight="3dp"
                        app:layout_constraintTop_toBottomOf="@+id/txt_distancemiles"/>
                <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_submit"
                        style="@style/txt_headerseaction_bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_rect_btn_green"
                        android:text="@string/search_doctors"
                        android:onClick="SearchDoctorBySpecialist"
                        android:textAllCaps="false"
                        android:textColor="@color/white_color"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_margin="@dimen/margin_10"
                        app:layout_constraintEnd_toEndOf="parent"/>
                <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guidelineLeft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.1548"/>

                <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guidelineBottom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintGuide_percent="0.3248"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
