<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/layout">

    <data>

        <variable
                name="doctordetaillistviewmodel"
                type="com.docter.docter.viewmodel.DoctorDetailListViewmodel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <include
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:id="@+id/toolbar_profile"
                layout="@layout/layout_header_nav"
                app:layout_constraintTop_toTopOf="parent"/>

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="?attr/actionBarSize"
                android:fillViewport="true">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/doctor_profiledetails"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white_color"
                    tools:context=".ui.splash.DoctorListDetail">

                <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_doctorprofil1ebg"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        app:srcCompat="@drawable/profile_bg"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginBottom="8dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
                />
                <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_doctorprofile"
                        android:layout_width="95dp"
                        android:layout_height="95dp"
                        android:background="@drawable/round_rect_btn_blue"
                        app:srcCompat="@drawable/profile_dummy_female"
                        android:layout_margin="@dimen/margin_10"
                        android:padding="@dimen/margin_10"
                        android:backgroundTint="@color/transparentwhite"
                        app:layout_constraintBottom_toBottomOf="@+id/img_doctorprofil1ebg"
                        app:layout_constraintEnd_toEndOf="@+id/img_doctorprofil1ebg"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/img_doctorprofil1ebg"
                        app:layout_constraintTop_toTopOf="@+id/img_doctorprofil1ebg"
                        app:layout_constraintVertical_bias="0.383"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_profiledoctorname"
                        style="@style/txt_headerseaction_bold"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="Huanin An, M.D"
                        android:textColor="@color/white_color"
                        android:textSize="@dimen/text_size_20"
                        app:layout_goneMarginStart="@dimen/margin_10"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintBottom_toBottomOf="@+id/img_doctorprofil1ebg"
                        app:layout_constraintEnd_toEndOf="@+id/img_doctorprofil1ebg"
                        app:layout_constraintTop_toTopOf="@+id/img_doctorprofil1ebg"
                        app:layout_constraintStart_toEndOf="@+id/img_doctorprofile"
                        app:layout_constraintVertical_bias="0.383"/>
                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_profiledoctorspecialist"
                        style="@style/txt_footerseaction_regular"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="Family Medicine"
                        android:textColor="@color/white_color"
                        android:textSize="@dimen/text_size_18"
                        app:layout_goneMarginStart="@dimen/margin_10"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt_profiledoctorname"
                        app:layout_constraintStart_toEndOf="@+id/img_doctorprofile"
                        app:layout_constraintHorizontal_bias="0.0"/>
                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_profilecalldoctor"
                        style="@style/txt_footerseaction_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(202) 534-4534"
                        android:drawableLeft="@drawable/phoneicon"
                        android:textColor="@color/app_blue"
                        android:drawableTint="@color/app_blue"
                        android:textSize="@dimen/text_size_16"
                        android:drawablePadding="@dimen/margin_8"
                        android:layout_marginTop="16dp"
                        android:padding="@dimen/margin_10"
                        android:layout_marginBottom="@dimen/margin_5"
                        android:onClick="phoneNumber"
                        android:background="@drawable/round_rect_profile_blue"
                        app:layout_constraintHorizontal_chainStyle="spread"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/txt_profilegetdirection"
                        app:layout_constraintBottom_toBottomOf="@+id/img_doctorprofil1ebg"/>
                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_profilegetdirection"
                        style="@style/txt_footerseaction_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/getdirection"
                        android:textColor="@color/app_blue"
                        android:drawableTint="@color/app_blue"
                        android:padding="@dimen/margin_10"
                        android:background="@drawable/round_rect_profile_blue"
                        android:drawableLeft="@drawable/phoneicon"
                        android:drawablePadding="@dimen/margin_8"
                        android:textSize="@dimen/text_size_16"
                        android:layout_marginBottom="@dimen/margin_5"
                        android:onClick="googleMap"
                        app:layout_constraintLeft_toRightOf="@+id/txt_profilecalldoctor"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toBottomOf="@+id/img_doctorprofil1ebg"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_gender"
                        style="@style/txt_headerseaction_bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_10"
                        android:layout_margin="@dimen/margin_10"
                        android:drawablePadding="@dimen/margin_20"
                        android:drawableLeft="@drawable/ic_gender_icon"
                        android:text="@string/gender"
                        android:textColor="@color/app_blue"
                        android:textSize="@dimen/text_size_22"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/img_doctorprofil1ebg"/>
                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/value_gender"
                        style="@style/txt_footerseaction_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_10"
                        android:text="Male"
                        android:textSize="@dimen/text_size_18"
                        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
                        app:layout_constraintTop_toBottomOf="@+id/txt_gender"/>
                <View
                        android:id="@+id/search_divider"
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:background="@color/black"
                        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
                        app:layout_constraintTop_toBottomOf="@+id/value_gender"/>
                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_speciality"
                        style="@style/txt_headerseaction_bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_10"
                        android:layout_margin="@dimen/margin_10"
                        android:drawableLeft="@drawable/ic_specialties_icon"
                        android:drawableTint="@color/app_blue"
                        android:drawablePadding="@dimen/margin_20"
                        android:text="@string/specialist"
                        android:textColor="@color/app_blue"
                        android:textSize="22sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/search_divider"/>
                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/value_speciality"
                        style="@style/txt_headerseaction_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_10"
                        android:drawableLeft="@drawable/dot"
                        android:drawablePadding="@dimen/margin_10"
                        android:text="Family Medicine"
                        android:textSize="@dimen/text_size_20"
                        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
                        app:layout_constraintTop_toBottomOf="@+id/txt_speciality"/>
                <View
                        android:id="@+id/search_divider1"
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:background="@color/black"
                        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
                        app:layout_constraintTop_toBottomOf="@+id/value_speciality"/>
                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_officelocation"
                        style="@style/txt_headerseaction_bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_10"
                        android:layout_margin="@dimen/margin_10"
                        android:drawableLeft="@drawable/ic_office_location_icons"
                        android:drawableTint="@color/app_blue"
                        android:text="@string/office_location"
                        android:textColor="@color/app_blue"
                        android:drawablePadding="@dimen/margin_20"
                        android:textSize="22sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/search_divider1"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/value_officelocation"
                        style="@style/txt_footerseaction_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_10"
                        android:text="275 7TH AVE \n New York,NY \n Zip:10001"
                        android:textSize="@dimen/text_size_18"
                        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
                        app:layout_constraintTop_toBottomOf="@+id/txt_officelocation"/>
                <View
                        android:id="@+id/search_divider2"
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:background="@color/black"
                        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
                        app:layout_constraintTop_toBottomOf="@+id/value_officelocation"/>
                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_languagespoken_doctor"
                        style="@style/txt_headerseaction_bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_10"
                        android:layout_margin="@dimen/margin_10"
                        android:drawableLeft="@drawable/ic_language_spoken_icon"
                        android:drawableTint="@color/app_blue"
                        android:drawablePadding="@dimen/margin_20"
                        android:textColor="@color/app_blue"
                        android:text="@string/languagespoken_staff"
                        android:textSize="22sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/search_divider2"/>
                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/value_languagespoken_doctor"
                        style="@style/txt_footerseaction_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_10"
                        android:text="English"
                        android:textSize="@dimen/text_size_18"
                        android:drawableLeft="@drawable/dot"
                        android:drawablePadding="@dimen/margin_10"
                        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
                        app:layout_constraintTop_toBottomOf="@+id/txt_languagespoken_doctor"/>
                <View
                        android:id="@+id/search_divider3"
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:background="@color/black"
                        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
                        app:layout_constraintTop_toBottomOf="@+id/value_languagespoken_doctor"/>
                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_languagespoken_staff"
                        style="@style/txt_headerseaction_bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_10"
                        android:layout_margin="@dimen/margin_10"
                        android:drawableLeft="@drawable/ic_language_spoken_icon"
                        android:drawableTint="@color/app_blue"
                        android:text="@string/languagespoken_doctor"
                        android:textColor="@color/app_blue"
                        android:drawablePadding="@dimen/margin_20"
                        android:textSize="22sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/search_divider3"/>
                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/value_languagespoken_staff"
                        style="@style/txt_footerseaction_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_10"
                        android:textSize="@dimen/text_size_18"
                        android:text="English"
                        android:drawableLeft="@drawable/dot"
                        android:drawablePadding="@dimen/margin_10"
                        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
                        app:layout_constraintTop_toBottomOf="@+id/txt_languagespoken_staff"/>
                <View
                        android:id="@+id/search_divider4"
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:background="@color/black"
                        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
                        app:layout_constraintTop_toBottomOf="@+id/value_languagespoken_staff"/>
                <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guidelineLeft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.1548"/>

                <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guidelineBottom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintGuide_percent="0.268"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>